elliptic/envoy/tls/httproutea.yaml
---
apiVersion: v1
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMyakNDQWNJQ0FRQXdEUVlKS29aSWh2Y05BUUVMQlFBd0xURVZNQk1HQTFVRUNnd01aWGhoYlhCc1pTQkoKYm1NdU1SUXdFZ1lEVlFRRERBdGxlR0Z0Y0d4bExtTnZiVEFlRncweU5URXhNamt3TkRRMk5UTmFGdzB5TmpFeApNamt3TkRRMk5UTmFNRGt4R0RBV0JnTlZCQU1NRDNkM2R5NWxlR0Z0Y0d4bExtTnZiVEVkTUJzR0ExVUVDZ3dVClpYaGhiWEJzWlNCdmNtZGhibWw2WVhScGIyNHdnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUsKQW9JQkFRQzkwVlRTYlNubzBTR09RWFZDS2E3aUxuL0c0M2pJS3hWZjFvZTEyU3JZOFh4b2pRRVFlSWEyNVZLbQpVWHMrZWFJa0xEWnZzV [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2UUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktjd2dnU2pBZ0VBQW9JQkFRQzkwVlRTYlNubzBTR08KUVhWQ0thN2lMbi9HNDNqSUt4VmYxb2UxMlNyWThYeG9qUUVRZUlhMjVWS21VWHMrZWFJa0xEWnZzVlhIdlJ3OQozdm40Q2tvUGVwVnJrYXdQbS9tVHVaaWJUeDVRektNazVJUmtsR2szVWw1a0xrMzRKYXFiUVhZNTIrTlZ6bXdoClEzNTc0eWtmekVpWTRiZ1BNOXdORi9odUZ2U3pqcmRQb0V2Z0tYbjFCajRSSTIxUFl2WGVCeUhRbU90cEtteDQKMnJYZ0QrTmhPdzNFZ1NSbGI0dTA4R0hyWVkvaDRDYzR4VEhPUFo5dTdvdTU2UHdKUG5EVGFwTUFHT1BFNTZDNgo0OExxR3prbFAwNDJiV [...]
kind: Secret
metadata:
  creationTimestamp: "2025-12-04T03:33:42Z"
  name: example-cert
  namespace: default
  resourceVersion: "8618"
  uid: b92fa675-fc5e-45b0-b908-bce189bba01d
type: kubernetes.io/tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: gatewayclass-servicea
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-servicea
spec:
  gatewayClassName: gatewayclass-servicea 
  listeners:
    - name: http
      protocol: HTTP
      port: 80
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          group: ""
          name: example-cert
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-servicea
spec:
  parentRefs:
    - name: gateway-servicea
  hostnames:
    - "www.example.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: servicea
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /servicea
